--- a/src/App.css
+++ b/src/App.css
@@ -22,3 +22,12 @@
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
 }
+
+body, html {
+  height: 100%;
+  background-image: url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSigs56gaOGcYCN13mZeupsUrS6C2jK9FSpTr1sF0YWL_ZapUI2');
+  background-position: center 100%;
+  background-size: cover;
+  background-repeat: repeat;
+  background-attachment: fixed;
+  }
