Added styling to add a container to the side of the news component

--- a/src/Containers/Team/Team.css
+++ b/src/Containers/Team/Team.css
@@ -1,3 +1,10 @@
 #favorite-team {
   cursor: pointer;
 }
+
+aside {
+  width: 15%;
+  padding-left: .5rem;
+  margin-left: .5rem;
+  float: left;
+}
