--- a/src/Containers/Team/Team.css
+++ b/src/Containers/Team/Team.css
@@ -1,4 +1,5 @@
 #favorite-team {
+  margin-top: 26px;
   cursor: pointer;
 }
 
@@ -12,6 +13,7 @@ aside {
 
 #carousel-image {
   max-height: 768px;
+  cursor: pointer;
 }
 
 #current-scores {
