delete a team works

--- a/src/Containers/Team/Team.css
+++ b/src/Containers/Team/Team.css
@@ -44,3 +44,7 @@ aside {
 #descriptionText {
   text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
 }
+
+#removeTeam {
+  margin-top: 30%;
+}
