changed buttons to opague

--- a/src/Containers/Team/Team.css
+++ b/src/Containers/Team/Team.css
@@ -1,6 +1,8 @@
 #favorite-team {
   margin-top: 26px;
   cursor: pointer;
+  color: white;
+  background-color: rgba(0, 54, 230, 0.297)
 }
 
 #favorite-team:hover {
