--- a/src/Containers/LoginPage/LoginForm.css
+++ b/src/Containers/LoginPage/LoginForm.css
@@ -14,3 +14,12 @@
 #formParent {
   display: flex;
 }
+
+#ringloader {
+  display: block;
+  margin: auto;
+  height: 100vh;
+  width: 100vh;
+  padding-top: 15rem;
+  z-index: 100000;
+}
