--- a/src/Containers/LoginPage/LoginForm.css
+++ b/src/Containers/LoginPage/LoginForm.css
@@ -4,6 +4,7 @@
   margin-top: 10%;
   align-items: center;
   justify-content: center;
+  
 }
 
 #sign-up {
@@ -22,4 +23,12 @@
   width: 100vh;
   padding-top: 15rem;
   z-index: 100000;
+}
+
+#wrongPassword {
+  color: red;
+}
+
+.alert {
+  width: 500px;
 }
