--- a/src/Components/SignUpPage/SignUpPage.css
+++ b/src/Components/SignUpPage/SignUpPage.css
@@ -5,3 +5,10 @@
   align-items: center;
   justify-content: center;
 }
+
+#ringloader {
+  display: block;
+  height: 100vh;
+  width: 100vh;
+  z-index: 100000;
+}
