changed some formatting

--- a/src/Containers/Team/Team.css
+++ b/src/Containers/Team/Team.css
@@ -64,3 +64,9 @@ aside {
 #modalContainer {
   overflow-y: initial !important;
 }
+
+#introHeading {
+    color: black;
+    text-align: center;
+    padding-top: 100px;
+}
