--- a/src/Components/Info/InfoPage.css
+++ b/src/Components/Info/InfoPage.css
@@ -1,7 +1,5 @@
 .infoPage {
-  color: white;
-  text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
+  color: black;
   text-align: center;
   padding-top: 100px;
-  
 }
